--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.6.0",
     "next": "13.2.4",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
@@ -31,6 +32,7 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "eslint-config-prettier": "^8.7.0"
   }
 }
