--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -16,13 +16,7 @@
     "incremental": true,
     "baseUrl": ".",
     "paths": {
-      "@/features/*": ["src/features/*"],
-      "@/pages/*": ["src/pages/*"],
-      "@/entities/*": ["src/entities/*"],
-      "@/app/*": ["src/app/*"],
-      "@/shared/*": ["src/shared/*"],
-      "@/processes/*": ["src/processes/*"],
-      "@/widgets/*": ["src/widgets/*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
