--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "gen": "openapi -i http://localhost:7777/swagger-json -o src/shared/openapi"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^2.9.11",
+    "@tanstack/react-query": "^4.28.0",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -25,12 +27,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
-    "react-query": "^3.39.3",
     "typescript": "5.0.2",
     "yup": "^1.0.2"
   },
   "devDependencies": {
     "@types/nprogress": "^0.2.0",
-    "eslint-config-prettier": "^8.7.0"
+    "eslint-config-prettier": "^8.7.0",
+    "openapi-typescript": "^6.2.0",
+    "openapi-typescript-codegen": "^0.23.0"
   }
 }
