--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,40 +1,51 @@
 {
   "name": "frontend",
-  "version": "0.1.0",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "gen": "openapi -i http://localhost:7777/swagger-json -o src/shared/openapi"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "generate": "npx openapi-generator-cli generate -i http://localhost:7777/swagger-json -g typescript-axios -o src/shared/api/openAPI --api-name-suffix Client"
   },
   "dependencies": {
     "@chakra-ui/react": "^2.5.2",
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@hookform/resolvers": "^2.9.11",
+    "@hookform/resolvers": "^3.0.0",
     "@tanstack/react-query": "^4.28.0",
-    "@types/node": "18.15.3",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "framer-motion": "^10.6.0",
-    "next": "13.2.4",
-    "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "framer-motion": "^10.8.5",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.7",
     "react-icons": "^4.8.0",
-    "typescript": "5.0.2",
+    "react-router-dom": "^6.9.0",
+    "sort-by": "^1.2.0",
     "yup": "^1.0.2"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0",
-    "eslint-config-prettier": "^8.7.0",
-    "openapi-typescript": "^6.2.0",
-    "openapi-typescript-codegen": "^0.23.0"
+    "@openapitools/openapi-generator-cli": "^2.5.2",
+    "@types/node": "^18.15.5",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router": "^5.1.20",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "@typescript-eslint/parser": "^5.56.0",
+    "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.6",
+    "typescript": "^5.0.2",
+    "vite": "^4.2.0"
   }
 }
