--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
-    "cookie": "^0.5.0",
     "framer-motion": "^10.9.1",
+    "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "@openapitools/openapi-generator-cli": "^2.5.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "^18.15.10",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
