--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,8 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "react-textarea-autosize": "^8.4.1",
+    "react-virtuoso": "^4.1.1",
     "socket.io-client": "^4.6.1",
     "sort-by": "^1.2.0",
     "yup": "^1.0.2"
