--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,14 +13,14 @@
     "generate": "npx openapi-generator-cli generate -i http://localhost:7777/swagger-json -g typescript-axios -o src/shared/api/openAPI --api-name-suffix Client"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.5.5",
     "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
     "@hookform/resolvers": "^3.0.0",
+    "@mantine/core": "^6.0.6",
+    "@mantine/hooks": "^6.0.6",
+    "@mantine/notifications": "^6.0.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
-    "framer-motion": "^10.9.1",
     "js-cookie": "^3.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
